<resources>
    <string name="app_name">Parole</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>
    <string name="cd_image">Image sent by user</string>
    <string name="hint_description">Description</string>
    <string name="hint_hashtag">#hashtag</string>
    <string name="hint_type_your_message">Type your message</string>
    <string name="cd_pick_an_image_from_local_storage">Pick an image from local storage</string>
    <string name="cd_save_this_hashtag_in_favorites">Save this hashtag in favorites</string>
    <string name="dc_like_this_hashtag">Like this hashtag</string>
    <string name="cd_user_logo">User Logo</string>
    <string name="search">Search</string>
    <string name="cd_pick_an_emoji">Pick an emoji</string>
    <string name="extra_image">extra_photo_image</string>
    <string name="args_top_rated">top_rated</string>
    <string name="args_last_added">last_added</string>
    <string name="args_favorites">favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="extra_new_hashtag">extra_new_hashtag</string>
    <string name="extra_new_hashtag_text">extra_new_hashtag_text</string>
    <string name="extra_new_image">extra_new_hashtag_image_byte_array</string>
    <string name="cd_send_button">Send button</string>
    <string name="cd_add_picture_button">Add Picture Button</string>
    <string name="cd_take_picture_button">Take Picture Button</string>
    <string name="cd_image_choosen_by_the_user">Image Choosen By The User</string>
</resources>
