<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="96dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <TextView
        android:id="@+id/tv_hashtag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="#lentejas" />

    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_hashtag"
        tools:text="Hoy para comer hay lentejas, si las quieres bien y si no las dejas." />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="17dp" />

    <ImageButton
        android:id="@+id/thumb_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/fui_transparent"
        android:contentDescription="@string/dc_like_this_hashtag"
        app:layout_constraintBottom_toBottomOf="@+id/likes_count_tv"
        app:layout_constraintStart_toEndOf="@+id/likes_count_tv"
        app:layout_constraintTop_toTopOf="@+id/likes_count_tv"
        app:srcCompat="@drawable/ic_thumb_up_black_24dp" />

    <ImageButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/fui_transparent"
        android:contentDescription="@string/cd_save_this_hashtag_in_favorites"
        app:layout_constraintStart_toEndOf="@+id/thumb_up"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:srcCompat="@drawable/ic_favorite_border_black_24dp" />

    <TextView
        android:id="@+id/likes_count_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/text"
        tools:text="99" />

    <ImageView
        android:id="@+id/hashtag_image"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_account_circle_black_24dp"
        android:contentDescription="@string/cd_user_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintStart_toEndOf="@+id/favorite_button"
        app:layout_constraintTop_toBottomOf="@+id/text"
        tools:text="\@pacoleon" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="72dp"
        android:background="@color/borderPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/user_button" />

</android.support.constraint.ConstraintLayout>